<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            app:srcCompat="@drawable/iv_welcome_page" />

        <TextView
            android:id="@+id/tv_title_welcome"
            style="@style/PageTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/wide_margin"
            android:text="@string/title_welcome" />

        <TextView
            android:id="@+id/tv_welcome_description"
            style="@style/PageDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_margin"
            android:text="@string/tv_welcome_description" />

        <Button
            android:id="@+id/btn_start"
            style="@style/RoseButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/medium_margin"
            android:layout_marginTop="@dimen/wide_margin"
            android:layout_marginEnd="@dimen/medium_margin"
            android:text="@string/tx_lets_start" />

    </LinearLayout>

</layout>